src/service-authapi.yaml
kind: Service
apiVersion: v1
metadata:
  name: sa-authapi
spec:
  ports:
  - protocol: TCP
    port: 80
  type: ExternalName
  externalName: devauth.staracademyapp.com
