src/service-sa-dashboard.yaml
kind: Service
apiVersion: v1
metadata:
  name: sa-dashboard
spec:
  ports:
  - protocol: TCP
    port: 80
  type: ExternalName
  externalName: devapp.staracademyapp.com
