src/route-authapi.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sa-authapi
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /auth-api
        pathType: ImplementationSpecific
        backend:
          service:
            name: sa-authapi
            port:
              number: 443
