src/route-sa-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sa-dashboard-route
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/methods: "GET,POST"
    konghq.com/protocols: "https"
spec:
  ingressClassName: kong
  rules:
  - host: devapp.staracademyapp.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: sa-dashboard
            port:
              number: 80
